--- a/style.css
+++ b/style.css
@@ -15,7 +15,10 @@
     --color-light-black: #1a1a1a;
     --color-white: #fff;
     --color-gray: #B7B7B7;
+}
 
+html {
+    scroll-behavior: smooth;
 }
 
 body {
@@ -23,8 +26,6 @@ body {
     position: relative;
     overflow-x: hidden;
     padding: 0 1rem;
-    scroll-behavior: smooth;
-
 }
 
 .mt-1 {
@@ -134,6 +135,10 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 .font-bueno {
     font-family: 'BuenoBold', sans-serif;
 }
@@ -172,6 +177,11 @@ header p {
     }
 }
 
+#arrow-down {
+    position: absolute;
+    bottom: 2rem;
+}
+
 .bar-fixed {
     display: flex;
     width: 100%;
@@ -183,21 +193,17 @@ header p {
     padding: 1rem 8rem;
     border-top: 1px solid var(--color-gray);
     z-index: 99;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .bar-fixed-bg {
-    /* background-color: rgba(0, 0, 0, 0.1); */
     width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
-    /* From https://css.glass */
     background: rgba(0, 0, 0, 0.5);
-    /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3); */
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(10px);
-    /* border: 1px solid rgba(255, 255, 255, 0.3); */
     z-index: -1;
 }
 
@@ -223,10 +229,17 @@ header p {
     bottom: 0;
 }
 
+main {
+    position: relative;
+    height: 100vh;
+    margin-bottom: 3vh;
+}
+
 main form {
     gap: 0.5rem;
-    padding: 15rem 0;
+    /* padding: 15rem 0; */
     width: 40rem;
+    margin: auto;
 }
 
 main form img {
@@ -280,12 +293,13 @@ main form img {
     border-radius: 2.5rem;
     padding: 3rem 3rem;
     max-width: 35rem;
-    transition: 0.5s;
+    transition: 0.3s;
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
 }
 
 .card:hover {
-    transform: scale(1.03);
-    /* animation: bg-zoom 2s linear; */
+    transform: scale(1.03) translate(0%, 0%);
     /* background-size: 120%; */
 }
 
@@ -302,7 +316,7 @@ main form img {
 .card-header {
     display: flex;
     justify-content: space-between;
-    border-bottom: 3px var(--color-black) solid;
+    border-bottom: 2px var(--color-black) solid;
     padding-bottom: 1rem;
 }
 
@@ -313,6 +327,13 @@ main form img {
 
 .indented {
     margin-left: 2rem;
+}
+
+.arrow-card {
+    position: absolute;
+    bottom: 2rem;
+    right: 2rem;
+    z-index: 5;
 }
 
 .card-1 {
@@ -474,6 +495,7 @@ main form img {
 
 .card-5 {
     border: 1px solid rgba(255, 255, 255, 0.30);
+    cursor: pointer;
 }
 
 .card-5 h2 {
