--- a/style.css
+++ b/style.css
@@ -97,6 +97,11 @@ body {
     flex-direction: row-reverse;
 }
 
+.pipe {
+    color: #000;
+    padding: 0 2rem;
+}
+
 .button,
 .button-vip {
     white-space: nowrap;
@@ -109,6 +114,22 @@ body {
     background-color: var(--color-primary);
     padding: 1.2rem 4rem;
     font-size: 0.85rem;
+    transition: 0.3s;
+}
+
+.button:active {
+    transform: scale(1.015);
+    box-shadow: #F74305 0px 0px 20px 1px;
+}
+
+form .button {
+    padding: 1.5rem 4rem;
+    margin-top: 1rem;
+}
+
+.button:hover {
+    background-color: #fff;
+    color: var(--color-primary);
 }
 
 .button-vip {
@@ -121,7 +142,16 @@ body {
 input {
     padding: 1rem 2rem;
     background-color: var(--color-light-black);
-    border: solid 1px var(--color-white);
+    border: solid 1px rgba(255, 255, 255, 0.5);
+    transition: 0.1s;
+}
+
+input:hover {
+    border: solid 1px #ffffff;
+}
+
+input::placeholder:focus {
+    color: white;
 }
 
 input::placeholder {
@@ -161,7 +191,7 @@ header p {
     color: var(--color-black);
     /* white-space: nowrap; */
     font-size: 1rem;
-    padding: 0.3rem 1rem;
+    padding: 0.3rem 0rem;
     /* text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     font-weight: 500;
     animation: scroll 25s infinite linear;
@@ -210,7 +240,6 @@ header p {
 .bar-fixed {
     display: flex;
     align-items: center;
-    text-align: center;
 }
 
 .bar-fixed p {
@@ -238,12 +267,16 @@ main {
 main form {
     gap: 0.5rem;
     /* padding: 15rem 0; */
-    width: 40rem;
+    width: 25rem;
     margin: auto;
 }
 
+main form input {
+    padding: 1.3rem 1rem;
+}
+
 main form img {
-    width: 8.9rem;
+    width: 13rem;
     margin-bottom: 1rem;
 }
 
@@ -296,6 +329,7 @@ main form img {
     transition: 0.3s;
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
+    cursor: default;
 }
 
 .card:hover {
@@ -406,6 +440,7 @@ main form img {
 
 .card-4 {
     padding: 0;
+    z-index: 2;
 }
 
 .card-4 p,
