--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 
 html {
     scroll-behavior: smooth;
+    /* overflow-x: hidden; */
 }
 
 body {
@@ -67,11 +68,7 @@ body {
     align-items: center;
 }
 
-.inv-text {
-    position: absolute;
-    right: -9rem;
-    pointer-events: none;
-}
+
 
 .justify-center {
     justify-content: center;
@@ -97,9 +94,13 @@ body {
     flex-direction: row-reverse;
 }
 
+.br-line-mob {
+    display: none;
+}
+
 .pipe {
     color: #000;
-    padding: 0 2rem;
+    padding: 0 3rem;
 }
 
 .button,
@@ -108,6 +109,7 @@ body {
     cursor: pointer;
     font-weight: 500;
     text-decoration: none;
+
 }
 
 .button {
@@ -117,10 +119,7 @@ body {
     transition: 0.3s;
 }
 
-.button:active {
-    transform: scale(1.015);
-    box-shadow: #F74305 0px 0px 20px 1px;
-}
+
 
 form .button {
     padding: 1.5rem 4rem;
@@ -128,15 +127,25 @@ form .button {
 }
 
 .button:hover {
+    transform: scale(1.015);
+    box-shadow: #f7410585 0px 0px 50px 1px;
+}
+
+.button:active {
     background-color: #fff;
     color: var(--color-primary);
+    transform: scale(1);
+    box-shadow: unset;
 }
+
+
 
 .button-vip {
     border: 1px var(--color-white) solid;
     padding: 1rem 3rem;
     border-radius: 3rem;
     font-size: 0.9rem;
+
 }
 
 input {
@@ -144,20 +153,24 @@ input {
     background-color: var(--color-light-black);
     border: solid 1px rgba(255, 255, 255, 0.5);
     transition: 0.1s;
+    text-transform: none;
+}
+
+input::placeholder {
+    color: rgba(185, 185, 185, 0.5);
+    font-size: 0.8rem;
+    text-transform: uppercase;
 }
 
 input:hover {
     border: solid 1px #ffffff;
 }
 
-input::placeholder:focus {
+input:focus::placeholder {
     color: white;
 }
 
-input::placeholder {
-    color: rgb(185, 185, 185);
-    font-size: 0.9rem;
-}
+
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -177,7 +190,7 @@ a {
     font-family: 'BuenoExtraBold', sans-serif;
 }
 
-header {
+#header {
     display: inline-flex;
     background-color: var(--color-primary);
     position: absolute;
@@ -187,7 +200,7 @@ header {
     width: 100%;
 }
 
-header p {
+#header p {
     color: var(--color-black);
     /* white-space: nowrap; */
     font-size: 1rem;
@@ -242,9 +255,12 @@ header p {
     align-items: center;
 }
 
-.bar-fixed p {
-    margin: 0 4rem;
+.bar-fixed div {
+    display: flex;
+    align-items: center;
 }
+
+.bar-fixed p {}
 
 .bar-fixed div img {
     margin-right: 4rem;
@@ -258,24 +274,29 @@ header p {
     bottom: 0;
 }
 
-main {
+#main {
     position: relative;
     height: 100vh;
     margin-bottom: 3vh;
+
 }
 
-main form {
+form span:not(:nth-last-child(2)) {
+    padding-bottom: 0.2rem;
+}
+
+#main form {
     gap: 0.5rem;
     /* padding: 15rem 0; */
     width: 25rem;
     margin: auto;
 }
 
-main form input {
+#main form input {
     padding: 1.3rem 1rem;
 }
 
-main form img {
+#main form img {
     width: 13rem;
     margin-bottom: 1rem;
 }
@@ -299,8 +320,18 @@ main form img {
     position: relative;
 }
 
-.benefits-section h1 span::after {
-    content: url(assets/exclusivo.png);
+#exclusive-animated {
+    position: absolute;
+    top: -4rem;
+    left: 0;
+}
+
+
+#exclusive::after {
+    content: '';
+    /* background: url(assets/exclusivo.png) no-repeat center/contain; */
+    width: 100%;
+    height: 100%;
     position: absolute;
     left: 2rem;
 }
@@ -361,6 +392,8 @@ main form img {
 
 .indented {
     margin-left: 2rem;
+    color: var(--color-black);
+
 }
 
 .arrow-card {
@@ -368,6 +401,7 @@ main form img {
     bottom: 2rem;
     right: 2rem;
     z-index: 5;
+    width: 1.5rem;
 }
 
 .card-1 {
@@ -397,6 +431,11 @@ main form img {
     font-size: 5.625rem;
     padding-top: 18rem;
     padding-bottom: 6rem;
+    color: var(--color-black);
+}
+
+.card-1 p {
+    color: var(--color-black);
 }
 
 .card-2 {
@@ -413,7 +452,7 @@ main form img {
 }
 
 .card-3 {
-    background: #1F39F9;
+    background: var(--color-primary);
     position: relative;
 }
 
@@ -428,14 +467,22 @@ main form img {
     z-index: 1;
 }
 
+.card-3 p {
+    color: var(--color-black);
+}
+
 .card-3-bg {
-    background: url(assets/model2.png) no-repeat center/cover;
+    background: url(assets/model2.png) no-repeat left/105%;
     position: absolute;
     width: calc(100% - 2rem);
     height: 80%;
     top: 1rem;
     left: 1rem;
     border-radius: 3rem;
+}
+
+.card-3:hover .card-3-bg {
+    background: url(assets/model2-2.png) no-repeat left/105%;
 }
 
 .card-4 {
@@ -554,7 +601,7 @@ main form img {
 
 .card-6 h2 {
     font-size: 5rem;
-    border-bottom: 3px var(--color-black) solid;
+    border-bottom: 2px var(--color-black) solid;
     padding-top: 2rem;
     padding-bottom: 1rem;
     margin-bottom: 2rem;
@@ -656,14 +703,17 @@ main form img {
     z-index: 3;
 }
 
-.launch-section div p:nth-child(2) {
+.inv-text {
+    position: absolute;
+    right: -9rem;
+    pointer-events: none;
     color: rgb(70, 70, 70);
     margin-left: 2rem;
     font-size: 1rem;
     opacity: 0;
     transition: 1s;
-
 }
+
 
 .launch-section div:hover p:nth-child(2) {
     opacity: 1;
@@ -678,8 +728,8 @@ footer {
 }
 
 footer div {
-    gap: 1rem;
-    margin-top: 2rem;
+    gap: 5rem;
+    margin-top: 3rem;
     margin-bottom: 5rem;
 }
 
