--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -2,15 +2,7 @@
 @font-face {
     font-family: 'BuenoBlack';
     src: url('../assets/fonts/Bueno-Black.woff2') format('woff2'),
-        url('../assets/fonts/Bueno-Black.otf') format('opentype'),
-        url('../assets/fonts/Bueno-ExtraBold.otf') format('opentype'),
-        url('../assets/fonts/Bueno-ExtraBold.woff2') format('woff2'),
-        url('../assets/fonts/Bueno-Bold.otf') format('opentype'),
-        url('../assets/fonts/Bueno-Bold.woff2') format('woff2'),
-        url('../assets/fonts/Bueno-Regular.otf') format('opentype'),
-        url('../assets/fonts/Bueno-Regular.woff2') format('woff2'),
-        url('../assets/fonts/Bueno-Medium.otf') format('opentype'),
-        url('../assets/fonts/Bueno-Medium.woff2') format('woff2');
+        url('../assets/fonts/Bueno-Black.otf') format('opentype');
     /* Modern Browsers */
     /* Safari, Android, iOS */
 
