--- a/styles/style.css
+++ b/styles/style.css
@@ -274,8 +274,27 @@ a {
 
 #main {
     position: relative;
-    height: 100vh;
-    margin-bottom: 3vh;
+    /* height: 100vh; */
+    /* margin-bottom: 3vh; */
+}
+
+#video-bg {
+    position: absolute;
+    object-fit: cover;
+    height: 100%;
+    width: 120%;
+    z-index: -2;
+    filter: brightness(10%);
+}
+
+#main::after {
+    content: '';
+    width: 120%;
+    height: 20rem;
+    background-image: linear-gradient(to bottom, transparent 0%, black 100%);
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
 }
 
 #main form span {
@@ -302,7 +321,7 @@ a {
 
 #main form img {
     width: 13rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .spinner-container {
@@ -338,22 +357,28 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 6rem;
 }
 
 .benefits-section h1 {
     font-size: 8.75rem;
     max-width: 73rem;
     margin: auto auto 5rem;
+    font-family: 'BuenoBlack';
 }
 
 .benefits-section h1 span {
     position: relative;
 }
 
+#exclusive {
+    font-family: 'BuenoBlack';
+}
+
 #exclusive-animated {
     position: absolute;
-    top: -4rem;
-    left: 0;
+    top: -6rem;
+    left: 5rem;
 }
 
 #exclusive::after {
@@ -438,7 +463,6 @@ a {
 
 .card-1 {
     position: relative;
-    transition: 2s;
 }
 
 .card-1::before {
@@ -498,7 +522,7 @@ a {
 }
 
 .card-3 h2 {
-    font-size: 3.75rem;
+    font-size: 5rem;
     padding-top: 17rem;
     padding-bottom: 6rem;
     z-index: 1;
@@ -663,13 +687,14 @@ a {
     display: flex;
     position: relative;
     margin-bottom: 2rem;
+
 }
 
 .card-6-images:hover .images-slide {
     animation-play-state: paused;
 }
 
-.card-6-images::after,
+/* .card-6-images::after,
 .card-6-images::before {
     content: "";
     position: absolute;
@@ -677,9 +702,9 @@ a {
     height: 100%;
     width: 3rem;
     z-index: 2;
-}
+} */
 
-.card-6-images::after {
+/* .card-6-images::after {
     left: -3rem;
     background: white;
 
@@ -689,19 +714,28 @@ a {
     right: -3rem;
     background: white;
 
-}
+} */
 
 .images-slide {
     display: flex;
     animation: scroll 18s linear infinite;
+
 }
 
 
 .card-6-images .images-slide img {
     border-radius: 0.3125rem;
     margin-right: 1rem;
-    width: 300px;
+    width: 25rem;
+    /* width: 300px; */
     height: auto;
+    transition: 0.2s;
+    position: static;
+}
+
+.card-6-images .images-slide img:hover {
+    transform: scale(1.1);
+    box-shadow: rgba(0, 0, 0, 0.623) 0px 0px 30px 1px;
 }
 
 .card-7 {
