--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -265,6 +265,10 @@
         /* width: 10rem; */
     }
 
+    .mob-off {
+        display: none;
+    }
+
     .br-line-mob {
         display: block;
     }
