--- a/styles/thanks.css
+++ b/styles/thanks.css
@@ -2,11 +2,7 @@ body {
     padding: 0;
 }
 
-.wrapper {
-    background: linear-gradient(rgba(0, 0, 0, 0.82),
-            rgba(0, 0, 0, 0.82)),
-        url('../assets/bg-thanks.jpg') no-repeat center/cover;
-}
+.wrapper {}
 
 header {
     display: flex;
@@ -39,6 +35,7 @@ main section h1 {
     font-family: 'BuenoExtraBold';
     letter-spacing: 0.1rem;
     font-size: 5rem;
+    margin-bottom: 2rem;
 }
 
 main section p:nth-child(2) {
