--- a/styles/style.css
+++ b/styles/style.css
@@ -503,6 +503,16 @@ a {
     border: 1px solid rgba(255, 255, 255, 0.30);
 }
 
+
+#card-a-form {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+    top: 0;
+    left: 0;
+}
+
 .card-2 h2 {
     font-size: 3.75rem;
     padding: 1.25rem 0;
