--- a/styles/thanks.css
+++ b/styles/thanks.css
@@ -1,8 +1,10 @@
+:root {
+    color-scheme: light !important;
+}
+
 body {
     padding: 0;
 }
-
-.wrapper {}
 
 header {
     display: flex;
@@ -19,7 +21,6 @@ main {
     padding-top: 5.625rem;
     padding-bottom: 9.5rem;
     height: 100vh;
-
 }
 
 main section {
@@ -32,7 +33,8 @@ main section {
 }
 
 main section h1 {
-    font-family: 'BuenoExtraBold';
+    font-family: 'Bueno';
+    font-weight: 800;
     letter-spacing: 0.1rem;
     font-size: 5rem;
     margin-bottom: 2rem;
